# telegram_photos_to_yandex_disk_chat_bot

./: LICENSE  README.md  pyproject.toml
tg_photos_to_yadisk_chat_bot/adapters/tg_bot/: __init__.py  bot.py  settings.py
tg_photos_to_yadisk_chat_bot/adapters/tg_bot/handlers/: __init__.py  all_text_messages_handler.py  photos_and_videos_messages_handler.py
tg_photos_to_yadisk_chat_bot/adapters/yadisk_file_storage/: __init__.py
tg_photos_to_yadisk_chat_bot/adapters/yadisk_file_storage/storages/: __init__.py  common.py
tg_photos_to_yadisk_chat_bot/application/media_handler/dto/: __init__.py  media_files_dto.py
tg_photos_to_yadisk_chat_bot/application/media_handler/interfaces/: __init__.py  storages.py
tg_photos_to_yadisk_chat_bot/application/media_handler/services/: __init__.py  saving_media_service.py
tg_photos_to_yadisk_chat_bot/composites/: tg_bot_pooling.py
