[tool.poetry]
name = "tg-photos-to-yadisk-chat-bot"
version = "0.1.0"
description = "Chat bot for saving photos from the chat to yandex.disk"
authors = ["Алексей Лесков <alexleskov2000@gmail.com>"]
license = "MIT license"
readme = "README.md"
packages = [{include = "tg_photos_to_yadisk_chat_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
yadisk = "^2.1.0"
pytelegrambotapi = "^4.15.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
yapf = "^0.40.2"
flake8 = "^7.0.0"
toml = "^0.10.2"
flake8-pyproject = "^1.2.3"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "resty"
line_length = 80

[tool.yapf]
based_on_style = "pep8"
spaces_before_comment = 4
column_limit = 80
allow_split_before_dict_value = false
dedent_closing_brackets = true
split_complex_comprehension = true
split_arguments_when_comma_terminated = true
blank_line_before_nested_class_or_def = true
split_before_dict_set_generator = true
split_before_first_argument = true
split_before_arithmetic_operator = true
split_before_logical_operator = true
split_before_bitwise_operator = true

[tool.flake8]
max-line-length = 80
select = ['F', 'E', 'W', ]
ignore = ['W503', ]
per-file-ignores = [
    '*/adapters/*/repositories.py:E711,E712',
    '*/adapters/*/repositories/*:E711,E712',
    '*/migrations/*:E711,E712',
    '*/alembic/versions/*:E711,E712',
    '__init__.py:F401',
]
count = true